Fix opacity for disabled inputs on safari

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ input[type='number'] {
     padding: 0;
     box-shadow: 0 0 4px #6A1366;
     background-color: white;
+    opacity: 1;
 }
 
 .top {
